k8s/task/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task
  template:
    metadata:
      labels:
        app: task
    spec:
      containers:
      - name: task
        image: duynguyen21vnlp/ms-task:v1
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
      imagePullSecrets:
      - name: regcred
        # ports:
        # - containerPort: 80
