k8s/task/service.yml
apiVersion: v1
kind: Service
metadata:
  name: task
spec:
  selector:
    app: task
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  internalTrafficPolicy: Local
