k8s/task/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-service
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: task
            port:
              number: 3000
